--- a/projects/Harvardx/Capstone/Project 1 - Movielens/MovieLens Report Nir Levy.Rmd
+++ b/projects/Harvardx/Capstone/Project 1 - Movielens/MovieLens Report Nir Levy.Rmd
@@ -1,4 +1,3 @@
-
 # MovieLens Project Submission
 ## Nir Levy, January 2022
 
@@ -420,7 +419,8 @@ normalize(trainmat_final_10, method = "Z-score")
 # saving
 saveRDS(trainmat_final_10, file="trainmat")
 
-# Setting up the evaluation scheme (Leave one out cross validation)
+# Setting up the evaluation scheme (leave one out cross validation (LOOCV), 
+# reserving 10% of the training set for validation)
 Sys.time() # recording the start time in order to see how long this takes
 
 scheme_10 <- trainmat_final_10 %>% 
